Change carret on dropdown menu

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/contacto.css">
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/fonts.css">
+    <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <script src="../scripts/contacto.js" defer></script>
     <script src="../scripts/base.js" defer></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
@@ -19,9 +20,9 @@
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios</div>
+            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
             <div class="menu-item">Precios</div>
-            <div class="menu-item">Testimonios</div>
+            <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
         </div>
     </div>
