--- a/pages/precios.html
+++ b/pages/precios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/fonts.css">
+    <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/precios.css">
     <script src="../scripts/base.js" defer></script>
@@ -18,7 +19,7 @@
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow">&#x25be;</span></div>
+            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
             <div class="menu-item">Precios</div>
             <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
@@ -36,7 +37,7 @@
     </div>
 
     <div class="precios-container">
-        <h1 class="secondary-text">
+        <h1 class="precios-title">
             Conoce nuestros precios y promociones
         </h1>
         <div class="intersection-tracker"></div>
