--- a/pages/servicios/nutricion-clinica.html
+++ b/pages/servicios/nutricion-clinica.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../styles/contacto.css">
-    <link rel="stylesheet" href="../styles/base.css">
-    <link rel="stylesheet" href="../styles/fonts.css">
-    <!-- <script src="../scripts/nutricion-clinica.js" defer></script> -->
-    <script src="../scripts/base.js" defer></script>
+    <link rel="stylesheet" href="../../styles/fonts.css">
+    <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
+    <link rel="stylesheet" href="../../styles/base.css">
+    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
     <div class="header-container">
         <div class="header">
-            <img class="logo" src="../images/logo3.svg" alt="Libreros nutricion">
+            <img class="logo" src="../../images/logo3.svg" alt="Libreros nutricion">
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios/Nutrición Clinica</div>
+            <div class="menu-item">Servicios <span class="arrow"><i class="fa-solid fa-square-caret-down"></i></span></div>
             <div class="menu-item">Precios</div>
             <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
         </div>
-    </div>  
+    </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
             <p class="service-tab">Nutrición clínica</p>
@@ -35,16 +35,26 @@
         </div>
     </div>
     
+    <div class="cta-container">
+        <div class="cta">
+            <h2 class="cta-title">¡Toma el control de tu salud hoy!</h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div>
+        </div>
+    </div>
+
+    <i class="fa-regular fa-square-caret-down">
+
+    </i>
     <div class="footer-container">
         <div class="footer">
-            <img class="logo" src="../images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">LIBREROS NUTRICIÓN</div>
+            <img class="logo" src="../../images/logo3.svg" alt="Libreros nutricion">
+            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <p>© 2024 EL Diseño</p>
         <div class="sns">
-            <img class="icon" src="../images/instagram.svg">
-            <img class="icon" src="../images/facebook.svg">
-            <img class="icon" src="../images/linkedin.svg">
+            <img class="icon" src="../../images/instagram.svg">
+            <img class="icon" src="../../images/facebook.svg">
+            <img class="icon" src="../../images/linkedin.svg">
         </div>
     </div>
 </body>
