--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/fonts.css">
+    <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/inicio.css">
     <script src="./scripts/base.js" defer></script>
@@ -17,7 +18,7 @@
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow">&#x25be;</span></div>
+            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
             <div class="menu-item">Precios</div>
             <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
