--- a/pages/confirmacion.html
+++ b/pages/confirmacion.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/confirmacion.css">
     <link rel="stylesheet" href="../styles/base.css">
     <link rel="stylesheet" href="../styles/fonts.css">
+    <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <script src="../scripts/base.js" defer></script>
 </head>
 <body>
@@ -17,7 +18,7 @@
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow">&#x25be;</span></div>
+            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
             <div class="menu-item">Precios</div>
             <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
@@ -25,12 +26,12 @@
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service">Nutrición clínica</p>
-            <p class="service">Pérdida y control de peso</p>
-            <p class="service">Nutrición deportiva</p>
-            <p class="service">Planes de entrenamiento</p>
-            <p class="service">Diabetes</p>
-            <p class="service">Cineantropometría</p>
+            <p class="service-tab">Nutrición clínica</p>
+            <p class="service-tab">Pérdida y control de peso</p>
+            <p class="service-tab">Nutrición deportiva</p>
+            <p class="service-tab">Planes de entrenamiento</p>
+            <p class="service-tab">Diabetes</p>
+            <p class="service-tab">Cineantropometría</p>
         </div>
     </div>
     
