Add placeholder page for each service

--- a/pages/precios.html
+++ b/pages/precios.html
@@ -18,21 +18,21 @@
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
-            <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
-            <div class="menu-item">Precios</div>
-            <div class="menu-item">Dr. Libreros</div>
-            <div class="menu-item">Contacto</div>
+            <div class="menu-item" data-page="index">Inicio</div>
+            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="precios">Precios</div>
+            <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
+            <div class="menu-item" data-page="contacto">Contacto</div>
         </div>
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service-tab">Nutrición clínica</p>
-            <p class="service-tab">Pérdida y control de peso</p>
-            <p class="service-tab">Nutrición deportiva</p>
-            <p class="service-tab">Planes de entrenamiento</p>
-            <p class="service-tab">Diabetes</p>
-            <p class="service-tab">Cineantropometría</p>
+            <p class="service-tab" data-page="nutricion-clinica">Nutrición clínica</p>
+            <p class="service-tab" data-page="perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="service-tab" data-page="nutricion-deportiva">Nutrición deportiva</p>
+            <p class="service-tab" data-page="planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="service-tab" data-page="diabetes">Diabetes</p>
+            <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
 
