--- a/pages/servicios/nutricion-clinica.html
+++ b/pages/servicios/nutricion-clinica.html
@@ -35,10 +35,57 @@
             <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
-    <div class="cta-container" style="margin-top: 30vh;">
+
+    <div class="description-container">
+        <div class="service">
+            <h1 class="main-text">Nutrición Clínica</h1>
+        </div>
+        <div class="service-image">
+            <img src="../../images/services/pexels-beyzahzah-89810429-15319037.jpg" alt="Nutrición clínica" title="Photo by beyzahzah on Pexels">
+        </div>
+        <div class="service-summary">
+            La nutrición clínica te ofrece una guía personalizada para alcanzar tus objetivos de salud, previniendo o controlando
+            diversas condiciones y padecimientos. A través de una concientización de hábitos alimenticios y la promoción de estilos
+            de vida saludables, podrás:
+            <ul>
+                <li>
+                    <b>Lograr un peso saludable</b>: Obtén un plan alimenticio personalizado para alcanzar y mantener tu peso ideal de manera sostenible.
+                </li>
+                <li>
+                    <b>Controlar enfermedades crónicas</b>: Maneja eficazmente condiciones como diabetes, hipertensión, colesterol alto y enfermedades cardiovasculares a través de la alimentación.
+                </li>
+                <li>
+                    <b>Mejorar tu rendimiento físico y mental</b>: Optimiza tu energía, vitalidad y concentración con una nutrición adecuada.
+                </li>
+            </ul>
+        </div>
+        <div class="service-value">
+            <h2 class="value-title">
+                ¿Por qué elegir a nuestro nutricionista clínico?
+            </h2>
+            <p class="value-text">
+                Nuestros planes de alimentación están diseñados para ayudarte a:
+                <ul>
+                    <li>
+                        <b>Experiencia y enfoque holístico</b>: Te brindamos una evaluación integral de tu salud y estilo de vida para crear un plan personalizado.
+                    </li>
+                    <li>
+                        <b>Soporte personalizado y continuo</b>: Te acompañamos en todo el proceso, brindándote apoyo y motivación para alcanzar tus metas.</b>: aumenta tu energía y vitalidad
+                    </li>
+                    <li>
+                        <b>Planes de alimentación basados en evidencia</b>: Te ofrecemos planes nutricionales respaldados por la ciencia y adaptados a tus necesidades individuales.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="cta-container">
         <div class="cta">
-            <h2 class="cta-title">Nada por aqui... Estamos trabajando, por favor vuelve pronto.</h2>
-            <!-- <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div> -->
+            <h2 class="cta-title">
+                ¡Emprende tu camino hacia una vida más saludable y plena!
+            </h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Reserva tu consulta hoy mismo</a></div>
         </div>
     </div>
 
