--- a/pages/servicios/nutricion-clinica.html
+++ b/pages/servicios/nutricion-clinica.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <link rel="stylesheet" href="../../styles/servicio.css">
     <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
@@ -38,12 +38,14 @@
 
     <div class="description-container">
         <div class="service">
+            <p class="small-bold">Tu camino hacia una salud integral</p>
             <h1 class="main-text">Nutrición Clínica</h1>
         </div>
         <div class="service-image">
             <img src="../../images/services/pexels-beyzahzah-89810429-15319037.jpg" alt="Nutrición clínica" title="Photo by beyzahzah on Pexels">
         </div>
         <div class="service-summary">
+            <h2 class="summary-title">¿Deseas mejorar tu salud y bienestar general?</h2>
             La nutrición clínica te ofrece una guía personalizada para alcanzar tus objetivos de salud, previniendo o controlando
             diversas condiciones y padecimientos. A través de una concientización de hábitos alimenticios y la promoción de estilos
             de vida saludables, podrás:
