--- a/pages/servicios/cineantropometria.html
+++ b/pages/servicios/cineantropometria.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <link rel="stylesheet" href="../../styles/servicio.css">
     <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
@@ -18,27 +18,77 @@
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
-            <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
-            <div class="menu-item">Precios</div>
-            <div class="menu-item">Dr. Libreros</div>
-            <div class="menu-item">Contacto</div>
+            <div class="menu-item" data-page="index">Inicio</div>
+            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-solid fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="precios">Precios</div>
+            <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
+            <div class="menu-item" data-page="contacto">Contacto</div>
         </div>
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service-tab">Nutrición clínica</p>
-            <p class="service-tab">Pérdida y control de peso</p>
-            <p class="service-tab">Nutrición deportiva</p>
-            <p class="service-tab">Planes de entrenamiento</p>
-            <p class="service-tab">Diabetes</p>
-            <p class="service-tab">Cineantropometría</p>
+            <p class="service-tab" data-page="nutricion-clinica">Nutrición clínica</p>
+            <p class="service-tab" data-page="perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="service-tab" data-page="nutricion-deportiva">Nutrición deportiva</p>
+            <p class="service-tab" data-page="planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="service-tab" data-page="diabetes">Diabetes</p>
+            <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
-    <div class="cta-container" style="margin-top: 30vh;">
+
+    <div class="description-container">
+        <div class="service">
+            <p class="small-bold">Conoce tu cuerpo a fondo</p>
+            <h1 class="main-text">Cineantropometría</h1>
+        </div>
+        <div class="service-image">
+            <div class="service-image"><img src="../../images/services/medicion-grasa-corporal.jpg" alt="Cineantropometría"></div>
+        </div>
+        <div class="service-summary">
+            <h2 class="summary-title">
+                ¿Quieres conocer tu composición corporal con precisión y detalle?
+            </h2>
+            La cineantropometría es el arte y la ciencia de determinar la composición corporal (músculo, grasa y hueso) por medio
+            de mediciones corporales precisas. Esta información te permitirá:
+            <ul>
+                <li>
+                    <b>Evaluar tu estado de forma actual</b>: Obtener una comprensión profunda de tu composición corporal te ayudará a establecer objetivos realistas.
+                </li>
+                <li>
+                    <b>Monitorizar tu progreso</b>: Realizar mediciones periódicas te permitirá observar cómo tu cuerpo cambia con el tiempo y el esfuerzo.
+                </li>
+                <li>
+                    <b>Optimizar tu plan de entrenamiento y nutrición</b>: Ajustar tu plan de entrenamiento y alimentación en función de tu composición corporal te ayudará a maximizar tus resultados.
+                </li>
+            </ul>
+        </div>
+        <div class="service-value">
+            <h2 class="value-title">
+                ¿Por qué elegir a nuestro especialista en cineantropometría?
+            </h2>
+            <p class="value-text">
+                Nuestros planes de alimentación están diseñados para ayudarte a:
+                <ul>
+                    <li>
+                        <b>Tecnología de vanguardia</b>: Utilizamos equipos de medición de última generación para garantizar la precisión de los resultados.
+                    </li>
+                    <li>
+                        <b>Experiencia y conocimiento</b>: Contamos con profesionales capacitados para interpretar los datos de manera precisa y brindarte información valiosa.
+                    </li>
+                    <li>
+                        <b>Enfoque personalizado</b>: Te brindaremos una evaluación individualizada y te guiaremos en la interpretación de los resultados.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="cta-container">
         <div class="cta">
-            <h2 class="cta-title">Nada por aqui... Estamos trabajando, por favor vuelve pronto.</h2>
-            <!-- <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div> -->
+            <h2 class="cta-title">
+                ¡Toma el control de tu salud y conoce tu cuerpo a fondo
+            </h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Reserva tu consulta hoy mismo</a></div>
         </div>
     </div>
 
