--- a/pages/servicios/nutricion-deportiva.html
+++ b/pages/servicios/nutricion-deportiva.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <link rel="stylesheet" href="../../styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <link rel="stylesheet" href="../../styles/servicio.css">
     <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
@@ -18,27 +17,76 @@
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
-            <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
-            <div class="menu-item">Precios</div>
-            <div class="menu-item">Dr. Libreros</div>
-            <div class="menu-item">Contacto</div>
+            <div class="menu-item" data-page="index">Inicio</div>
+            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-solid fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="precios">Precios</div>
+            <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
+            <div class="menu-item" data-page="contacto">Contacto</div>
         </div>
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service-tab">Nutrición clínica</p>
-            <p class="service-tab">Pérdida y control de peso</p>
-            <p class="service-tab">Nutrición deportiva</p>
-            <p class="service-tab">Planes de entrenamiento</p>
-            <p class="service-tab">Diabetes</p>
-            <p class="service-tab">Cineantropometría</p>
+            <p class="service-tab" data-page="nutricion-clinica">Nutrición clínica</p>
+            <p class="service-tab" data-page="perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="service-tab" data-page="nutricion-deportiva">Nutrición deportiva</p>
+            <p class="service-tab" data-page="planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="service-tab" data-page="diabetes">Diabetes</p>
+            <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
-    <div class="cta-container" style="margin-top: 30vh;">
+
+    <div class="description-container">
+        <div class="service">
+            <p class="small-bold">Eleva tu rendimiento y alcanza tus metas</p>
+            <h1 class="main-text">Nutrición Deportiva</h1>
+        </div>
+        <div class="service-image">
+            <div class="service-image"><img src="../../images/services/derick-mckinney-__QqvTI5Edc-unsplash.jpg" alt="Nutrición deportiva" title="Photo by Derick McKinney on Unsplash"></div>
+        </div>
+        <div class="service-summary">
+            <h2 class="summary-title">¿Eres un atleta que busca optimizar su rendimiento y alcanzar sus metas?</h2>
+            La nutrición deportiva te brinda las herramientas para lograrlo. A través de una orientación alimentaria personalizada y la
+            elaboración de planes de alimentación y ejemplos de menú adaptados a tus necesidades específicas, podrás:
+            <ul>
+                <li>
+                    <b>Alcanzar la hipertrofia muscular deseada</b>: Optimiza tu ingesta de proteínas y nutrientes para desarrollar músculo de forma eficiente.
+                </li>
+                <li>
+                    <b>Aumentar tu fuerza y potencia</b>: Obtén la energía y los nutrientes necesarios para rendir al máximo en tus entrenamientos.
+                </li>
+                <li>
+                    <b>Mejorar tu desempeño deportivo</b>: Maximiza tu rendimiento en competiciones y entrenamientos con una alimentación estratégica.
+                </li>
+            </ul>
+        </div>
+        <div class="service-value">
+            <h2 class="value-title">
+                ¿Por qué elegir a nuestro dietista deportivo?
+            </h2>
+            <p class="value-text">
+                Nuestros planes de alimentación están diseñados para ayudarte a:
+                <ul>
+                    <li>
+                        <b>Experiencia comprobada</b>: Trabajamos con atletas de diversos niveles y disciplinas para ayudarlos a alcanzar sus objetivos.
+                    </li>
+                    <li>
+                        <b>Enfoque personalizado</b>: Creamos planes de alimentación adaptados a tus necesidades individuales, preferencias y estilo de vida.
+                            
+                    </li>
+                    <li>
+                        <b>Soporte continuo</b>: Te brindamos orientación y seguimiento durante todo el proceso para asegurar tu éxito.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="cta-container">
         <div class="cta">
-            <h2 class="cta-title">Nada por aqui... Estamos trabajando, por favor vuelve pronto.</h2>
-            <!-- <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div> -->
+            <h2 class="cta-title">
+                ¡Comienza a optimizar tu rendimiento deportivo!
+            </h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Reserva tu consulta hoy mismo</a></div>
         </div>
     </div>
 
