--- a/pages/servicios/perdida-y-control-de-peso.html
+++ b/pages/servicios/perdida-y-control-de-peso.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +7,7 @@
     <link rel="stylesheet" href="../../styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <link rel="stylesheet" href="../../styles/servicio.css">
     <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
@@ -18,27 +17,75 @@
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
-            <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
-            <div class="menu-item">Precios</div>
-            <div class="menu-item">Dr. Libreros</div>
-            <div class="menu-item">Contacto</div>
+            <div class="menu-item" data-page="index">Inicio</div>
+            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-solid fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="precios">Precios</div>
+            <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
+            <div class="menu-item" data-page="contacto">Contacto</div>
         </div>
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service-tab">Nutrición clínica</p>
-            <p class="service-tab">Pérdida y control de peso</p>
-            <p class="service-tab">Nutrición deportiva</p>
-            <p class="service-tab">Planes de entrenamiento</p>
-            <p class="service-tab">Diabetes</p>
-            <p class="service-tab">Cineantropometría</p>
+            <p class="service-tab" data-page="nutricion-clinica">Nutrición clínica</p>
+            <p class="service-tab" data-page="perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="service-tab" data-page="nutricion-deportiva">Nutrición deportiva</p>
+            <p class="service-tab" data-page="planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="service-tab" data-page="diabetes">Diabetes</p>
+            <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
-    <div class="cta-container" style="margin-top: 30vh;">
+
+    <div class="description-container">
+        <div class="service">
+            <p class="small-bold">Alcanza tu peso saludable y mantenlo</p>
+            <h1 class="main-text">Pérdida y Control de Peso</h1>
+        </div>
+        <div class="service-image">
+            <div class="service-image"><img src="../../images/services/derick-mckinney-__QqvTI5Edc-unsplash.jpg" alt="Nutrición deportiva" title="Photo by Derick McKinney on Unsplash"></div>
+        </div>
+        <div class="service-summary">
+            <h2 class="summary-title">
+                ¿Buscas una solución sostenible para la pérdida de peso y su mantenimiento a largo plazo?</h2>
+                Nuestro programa de Pérdida y Control de Peso te brinda la guía y el apoyo que necesitas. Juntos trabajaremos para:
+            <ul>
+                <li>
+                    <b>Establecer metas realistas</b>: Te ayudaremos a definir objetivos de pérdida de peso saludables y alcanzables.
+                </li>
+                <li>
+                    <b>Diseñar un plan de alimentación personalizado</b>: Crea un plan sostenible que se adapte a tus preferencias y estilo de vida.
+                </li>
+                <li>
+                    <b>Desarrollar hábitos saludables</b>: Te guiaremos para adoptar patrones de alimentación y actividad física que promuevan la pérdida de peso a largo plazo.
+                </li>
+            </ul>
+        </div>
+        <div class="service-value">
+            <h2 class="value-title">
+                ¿Por qué elegir nuestro programa de Pérdida y Control de Peso?
+            </h2>
+            <p class="value-text">
+                Nuestros planes de alimentación están diseñados para ayudarte a:
+                <ul>
+                    <li>
+                        <b>Enfoque personalizado</b>: Adaptamos nuestro enfoque a tus necesidades individuales y proporcionamos apoyo continuo.
+                    </li>
+                    <li>
+                        <b>Resultados sostenibles</b>: No fomentamos dietas relámpago, sino cambios duraderos en tu estilo de vida.                            
+                    </li>
+                    <li>
+                        <b>Más allá de la báscula</b>: Nos enfocamos en mejorar tu salud general, no solo en un número.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="cta-container">
         <div class="cta">
-            <h2 class="cta-title">Nada por aqui... Estamos trabajando, por favor vuelve pronto.</h2>
-            <!-- <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div> -->
+            <h2 class="cta-title">
+                ¡Empieza a ver resultados reales y sostenibles!
+            </h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Reserva tu consulta hoy mismo</a></div>
         </div>
     </div>
 
