--- a/pages/servicios/planes-de-entrenamiento.html
+++ b/pages/servicios/planes-de-entrenamiento.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../styles/fonts.css">
     <script src="https://kit.fontawesome.com/a5c4f7a4d5.js" crossorigin="anonymous"></script> <!-- Font awesome for icons-->
     <link rel="stylesheet" href="../../styles/base.css">
-    <link rel="stylesheet" href="../../styles/nutricion-clinica.css">
+    <link rel="stylesheet" href="../../styles/servicio.css">
     <script src="../../scripts/base.js" defer></script>
 </head>
 <body>
@@ -18,27 +18,77 @@
             <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
-            <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios <span class="arrow"><i class="fa-regular fa-square-caret-down"></i></span></div>
-            <div class="menu-item">Precios</div>
-            <div class="menu-item">Dr. Libreros</div>
-            <div class="menu-item">Contacto</div>
+            <div class="menu-item" data-page="index">Inicio</div>
+            <div class="menu-item" data-page="servicios">Servicios <span class="arrow"><i class="fa-solid fa-square-caret-down"></i></span></div>
+            <div class="menu-item" data-page="precios">Precios</div>
+            <div class="menu-item" data-page="dr-libreros">Dr. Libreros</div>
+            <div class="menu-item" data-page="contacto">Contacto</div>
         </div>
     </div>
     <div class="dropdown-container">      
         <div class="dropdown-menu">
-            <p class="service-tab">Nutrición clínica</p>
-            <p class="service-tab">Pérdida y control de peso</p>
-            <p class="service-tab">Nutrición deportiva</p>
-            <p class="service-tab">Planes de entrenamiento</p>
-            <p class="service-tab">Diabetes</p>
-            <p class="service-tab">Cineantropometría</p>
+            <p class="service-tab" data-page="nutricion-clinica">Nutrición clínica</p>
+            <p class="service-tab" data-page="perdida-y-control-de-peso">Pérdida y control de peso</p>
+            <p class="service-tab" data-page="nutricion-deportiva">Nutrición deportiva</p>
+            <p class="service-tab" data-page="planes-de-entrenamiento">Planes de entrenamiento</p>
+            <p class="service-tab" data-page="diabetes">Diabetes</p>
+            <p class="service-tab" data-page="cineantropometria">Cineantropometría</p>
         </div>
     </div>
-    <div class="cta-container" style="margin-top: 30vh;">
+
+    <div class="description-container">
+        <div class="service">
+            <p class="small-bold">Cuerpo y mente en sinergia</p>
+            <h1 class="main-text">Planes de Entrenamiento</h1>
+        </div>
+        <div class="service-image">
+            <div class="service-image"><img src="../../images/services/pexels-victorfreitas-2261482.jpg" alt="Planes de entrenamiento" title="Photo by Victor Freitas on Pexels"></div>
+        </div>
+        <div class="service-summary">
+            <h2 class="summary-title">
+                ¿Buscas un plan de entrenamiento personalizado que te ayude a alcanzar tus objetivos de fitness?
+            </h2>
+            Nuestros planes de entrenamiento, diseñados en sinergia con la nutrición deportiva, te guiarán en el camino hacia un cuerpo más
+            saludable y fuerte. A través de una estructuración y orientación física personalizada, podrás:
+            <ul>
+                <li>
+                    <b>Definir tus objetivos específicos</b>: Trabajaremos contigo para establecer metas claras y alcanzables.
+                </li>
+                <li>
+                    <b>Diseñar un plan de entrenamiento efectivo</b>: Te guiaremos en la realización de ejercicios adecuados a tu condición física y objetivos.
+                </li>
+                <li>
+                    <b>Optimizar tu rendimiento</b>: Combinaremos entrenamiento y nutrición para maximizar tus resultados.
+                </li>
+            </ul>
+        </div>
+        <div class="service-value">
+            <h2 class="value-title">
+                ¿Por qué elegir a nuestro entrenador personal?
+            </h2>
+            <p class="value-text">
+                Nuestros planes de alimentación están diseñados para ayudarte a:
+                <ul>
+                    <li>
+                        <b>Experiencia y conocimiento</b>: Contamos con un equipo de profesionales certificados y capacitados para guiarte en tu proceso.
+                    </li>
+                    <li>
+                        <b>Enfoque personalizado</b>: Creamos planes de entrenamiento adaptados a tus necesidades, nivel de condición física y preferencias.
+                    </li>
+                    <li>
+                        <b>Motivación y apoyo</b>: Te brindaremos el impulso y la motivación que necesitas para alcanzar tus metas.
+                    </li>
+                </ul>
+            </p>
+        </div>
+    </div>
+
+    <div class="cta-container">
         <div class="cta">
-            <h2 class="cta-title">Nada por aqui... Estamos trabajando, por favor vuelve pronto.</h2>
-            <!-- <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Agenda tu cita</a></div> -->
+            <h2 class="cta-title">
+                ¡Empieza tu camino hacia un cuerpo más sano y fuerte!
+            </h2>
+            <div class="booking-button"><a class="booking-link" href="../../pages/contacto.html">Reserva tu consulta hoy mismo</a></div>
         </div>
     </div>
 
