Edit service pages

--- a/pages/servicios/cineantropometria.html
+++ b/pages/servicios/cineantropometria.html
@@ -52,13 +52,23 @@
             de mediciones corporales precisas. Esta información te permitirá:
             <ul>
                 <li>
-                    <b>Evaluar tu estado de forma actual</b>: Obtener una comprensión profunda de tu composición corporal te ayudará a establecer objetivos realistas.
+                    <b>Evaluar tu estado de forma actual</b>: Obtener una comprensión profunda de tu composición corporal te ayudará
+                    a establecer objetivos realistas.
                 </li>
                 <li>
-                    <b>Monitorizar tu progreso</b>: Realizar mediciones periódicas te permitirá observar cómo tu cuerpo cambia con el tiempo y el esfuerzo.
+                    <b>Monitorizar tu progreso</b>: Realizar mediciones periódicas te permitirá observar cómo tu cuerpo cambia con el
+                    tiempo y el esfuerzo.
                 </li>
                 <li>
-                    <b>Optimizar tu plan de entrenamiento y nutrición</b>: Ajustar tu plan de entrenamiento y alimentación en función de tu composición corporal te ayudará a maximizar tus resultados.
+                    <b>Optimizar tu plan de entrenamiento y nutrición</b>: Ajustar tu plan de entrenamiento y alimentación en función
+                    de tu composición corporal te ayudará a maximizar tus resultados y alcanzar tus metas de manera eficiente.
+                </li>
+                <li>
+                    <b>Identificar áreas de mejora</b>: La cineantropometría te permite identificar zonas de tu cuerpo que requieren mayor atención en tu entrenamiento y nutrición.
+                </li>
+                <li>
+                    <b>Prevenir lesiones</b>: Conocer tu composición corporal puede ayudarte a prevenir lesiones causadas por desequilibrios
+                    musculares o una distribución inadecuada de la grasa corporal.
                 </li>
             </ul>
         </div>
@@ -67,18 +77,35 @@
                 ¿Por qué elegir a nuestro especialista en cineantropometría?
             </h2>
             <p class="value-text">
-                Nuestros planes de alimentación están diseñados para ayudarte a:
+                Nuestro experto en cineantropometría te ofrece:
                 <ul>
                     <li>
-                        <b>Tecnología de vanguardia</b>: Utilizamos equipos de medición de última generación para garantizar la precisión de los resultados.
+                        <b>Tecnología de vanguardia</b>: Utilizamos equipos de medición de última generación, como plicometría
+                        digital y bioimpedancia, para garantizar la precisión y confiabilidad de los resultados.
                     </li>
                     <li>
-                        <b>Experiencia y conocimiento</b>: Contamos con profesionales capacitados para interpretar los datos de manera precisa y brindarte información valiosa.
+                        <b>Experiencia y conocimiento</b>: Contamos con profesionales altamente capacitados e experimentados en
+                        cineantropometría, interpretación de datos y asesoramiento personalizado.
                     </li>
                     <li>
-                        <b>Enfoque personalizado</b>: Te brindaremos una evaluación individualizada y te guiaremos en la interpretación de los resultados.
+                        <b>Enfoque personalizado</b>: Te brindaremos una evaluación individualizada, considerando tu historial
+                        médico, objetivos, estilo de vida y hábitos alimenticios.
+                    </li>
+                    <li>
+                        <b>Interpretación detallada</b>: Te guiaremos en la interpretación de los resultados, explicándote
+                        su significado y relevancia para tu estado de salud y rendimiento físico.
+                    </li>
+                    <li>
+                        <b>Seguimiento y evaluación continua</b>: Podemos realizar mediciones periódicas para monitorizar tu
+                        progreso y ajustar tu plan de entrenamiento y nutrición según sea necesario.
+                    </li>
+                    <li>
+                        <b>Recomendaciones personalizadas</b>: Te proporcionaremos recomendaciones personalizadas en entrenamiento,
+                        nutrición y hábitos de vida para optimizar tu composición corporal y alcanzar tus metas.
                     </li>
                 </ul>
+                Con nuestros servicios de cineantropometría, podrás obtener una imagen precisa y detallada de tu composición corporal
+                para monitorizar tu progreso de manera efectiva.
             </p>
         </div>
     </div>
