--- a/pages/servicios/diabetes.html
+++ b/pages/servicios/diabetes.html
@@ -38,7 +38,7 @@
     <div class="description-container">
         <div class="service">
             <p class="small-bold">Empoderándote para el control de la diabetes</p>
-            <h1 class="main-text">Educacion en Diabetes</h1>
+            <h1 class="main-text">Educación en Diabetes</h1>
         </div>
         <div class="service-image">
             <div class="service-image"><img src="../../images/services/derick-mckinney-__QqvTI5Edc-unsplash.jpg" alt="Nutrición deportiva" title="Photo by Derick McKinney on Unsplash"></div>
@@ -49,13 +49,24 @@
             mejorar tu calidad de vida. Te guiaremos en la comprensión de:
             <ul>
                 <li>
-                    <b>¿Qué es la diabetes y sus tipos?</b> Aprenderás sobre la diabetes tipo 1 y tipo 2, sus causas y sus efectos en el organismo.
+                    <b>¿Qué es la diabetes y sus tipos?</b> Aprenderás sobre la diabetes tipo 1 y tipo 2, sus causas y sus efectos en
+                    el organismo y como diferenciarlas.
                 </li>
                 <li>
-                    <b>Manejo de la glucemia</b>: Te enseñaremos a controlar tus niveles de glucosa en sangre a través de la alimentación, la actividad física y la medicación.
+                    <b>Manejo de la glucemia</b>: Te enseñaremos a controlar tus niveles de glucosa en sangre a través de la alimentación,
+                    la actividad física, la medicación y el monitoreo regular.
                 </li>
                 <li>
-                    <b>Nutrición para la diabetes</b>: Descubrirás cómo adaptar tu dieta para mantener niveles de glucosa estables y prevenir complicaciones.
+                    <b>Nutrición para la diabetes</b>: Descubrirás cómo adaptar tu dieta para mantener niveles de glucosa estables y
+                    prevenir complicaciones para mejorar tu salud en general.
+                </li>
+                <li>
+                    <b>Nutrición para la diabetes</b>: Descubrirás cómo adaptar tu dieta para mantener niveles de glucosa estables,
+                    prevenir complicaciones y mejorar tu salud en general.
+                </li>
+                <li>
+                    <b>Prevención de complicaciones</b>: Te guiaremos en la adopción de hábitos saludables para prevenir o retrasar
+                    el desarrollo de complicaciones asociadas a la diabetes, como enfermedades cardíacas, nefropatía, retinopatía y neuropatía.
                 </li>
             </ul>
         </div>
@@ -64,27 +75,38 @@
                 ¿Por qué elegir a nuestro educador en diabetes?
             </h2>
             <p class="value-text">
-                Nuestros planes de alimentación están diseñados para ayudarte a:
+                Nuestro educador en diabetes te ofrece:
                 <ul>
                     <li>
-                        <b>Información actualizada y basada en evidencia científica</b>: Te brindaremos información confiable y actualizada sobre el manejo de la diabetes.
+                        <b>Información actualizada y basada en evidencia científica</b>: Te brindaremos información confiable y actualizada sobre el
+                        manejo de la diabetes, respaldada por las últimas investigaciones y recomendaciones de expertos.
                     </li>
                     <li>
-                        <b>Experiencia y conocimiento</b>: Nuestro educador en diabetes es un profesional certificado con amplia experiencia en el manejo de la diabetes.
+                        <b>Experiencia y conocimiento</b>: Nuestro educador en diabetes es un profesional certificado con amplia experiencia en
+                        el manejo de la diabetes y en la educación de pacientes.
                     </li>
                     <li>
-                        <b>Enfoque personalizado</b>: Creamos un plan educativo personalizado que se adapta a tus necesidades, estilo de vida y objetivos.
+                        <b>Enfoque personalizado</b>: Creamos un plan educativo personalizado que se adapta a tus necesidades, estilo de vida,
+                        objetivos y preferencias.
                     </li>
                     <li>
-                        <b>Soporte continuo</b>: Te brindaremos apoyo y seguimiento durante todo el proceso para asegurarte de que comprendas y puedas implementar las estrategias de manejo de la diabetes.
+                        <b>Soporte continuo</b>: Te brindaremos apoyo y seguimiento durante todo el proceso para asegurarte de que comprendas y
+                        puedas implementar las estrategias de manejo de la diabetes de manera efectiva.
                     </li>
                     <li>
-                        <b>Comunicación clara y efectiva</b>: Nos comunicaremos contigo de manera clara y comprensible, utilizando un lenguaje adaptado a tu nivel de conocimiento.
+                        <b>Comunicación clara y efectiva</b>: Nos comunicaremos contigo de manera clara, comprensible y empática, utilizando
+                        un lenguaje adaptado a tu nivel de conocimiento y necesidades.
                     </li>
                     <li>
-                        <b>Entorno compasivo y de apoyo</b>: Te brindaremos un espacio seguro y de apoyo para que puedas hacer preguntas y expresar tus inquietudes.
+                        <b>Entorno compasivo y de apoyo</b>: Te brindaremos un espacio seguro y de apoyo para que puedas hacer preguntas,
+                        expresar tus inquietudes y recibir orientación personalizada.
+                    </li>
+                    <li>
+                        <b>Recursos educativos adicionales</b>: Te proporcionaremos materiales educativos de calidad, incluyendo folletos, guías, recetas y herramientas digitales, para complementar tu aprendizaje y ayudarte a mantenerte informado.
                     </li>
                 </ul>
+                Con el conocimiento adquirido, podras tomar decisiones informadas sobre el manejo de tu condición para reducir el riesgo
+                de complicaciones y vivir una vida plena y activa.
             </p>
         </div>
     </div>
