--- a/pages/servicios/nutricion-clinica.html
+++ b/pages/servicios/nutricion-clinica.html
@@ -59,26 +59,30 @@
                 <li>
                     <b>Mejorar tu rendimiento físico y mental</b>: Optimiza tu energía, vitalidad y concentración con una nutrición adecuada.
                 </li>
+                <li>
+                    <b>Desarrollar hábitos alimenticios saludables</b>: Aprende a elegir alimentos nutritivos, planificar comidas deliciosas y crear una relación positiva con la comida.
+                </li>
             </ul>
         </div>
         <div class="service-value">
             <h2 class="value-title">
                 ¿Por qué elegir a nuestro nutricionista clínico?
             </h2>
-            <p class="value-text">
-                Nuestros planes de alimentación están diseñados para ayudarte a:
+            <div class="value-text">
+                Nuestro enfoque integral y personalizado te brinda:
                 <ul>
                     <li>
-                        <b>Experiencia y enfoque holístico</b>: Te brindamos una evaluación integral de tu salud y estilo de vida para crear un plan personalizado.
+                        <b>Evaluación completa</b>: Analizamos tu salud, estilo de vida y objetivos para crear un plan adaptado a tus necesidades.
                     </li>
                     <li>
-                        <b>Soporte personalizado y continuo</b>: Te acompañamos en todo el proceso, brindándote apoyo y motivación para alcanzar tus metas.</b>: aumenta tu energía y vitalidad
+                        <b>Soporte continuo</b>: Te acompañamos durante todo el proceso, brindándote apoyo y motivación para alcanzar tus metas.
                     </li>
                     <li>
-                        <b>Planes de alimentación basados en evidencia</b>: Te ofrecemos planes nutricionales respaldados por la ciencia y adaptados a tus necesidades individuales.
+                        <b>Planes basados en evidencia</b>: Te ofrecemos planes nutricionales respaldados por la ciencia y adaptados a tus necesidades individuales.
                     </li>
                 </ul>
-            </p>
+                Nuestro experto en nutrición clínica te ayudara a alcanzar tus objetivos de salud y bienestar a largo plazo.
+            </div>
         </div>
     </div>
 
