--- a/pages/servicios/nutricion-deportiva.html
+++ b/pages/servicios/nutricion-deportiva.html
@@ -49,6 +49,12 @@
             elaboración de planes de alimentación y ejemplos de menú adaptados a tus necesidades específicas, podrás:
             <ul>
                 <li>
+                    <b>Mejorar tu composición corporal</b>: Alcanzarás un equilibrio óptimo entre músculo, grasa y agua, mejorando tu rendimiento y apariencia física.
+                </li>
+                <li>
+                    <b>Recuperarte de manera efectiva</b>: Te proporcionamos estrategias nutricionales para acelerar tu recuperación después del ejercicio y prevenir lesiones.
+                </li>
+                <li>
                     <b>Alcanzar la hipertrofia muscular deseada</b>: Optimiza tu ingesta de proteínas y nutrientes para desarrollar músculo de forma eficiente.
                 </li>
                 <li>
@@ -63,21 +69,24 @@
             <h2 class="value-title">
                 ¿Por qué elegir a nuestro dietista deportivo?
             </h2>
-            <p class="value-text">
-                Nuestros planes de alimentación están diseñados para ayudarte a:
+            <div class="value-text">
+                Nuestro enfoque integral y personalizado te brinda:
                 <ul>
                     <li>
-                        <b>Experiencia comprobada</b>: Trabajamos con atletas de diversos niveles y disciplinas para ayudarlos a alcanzar sus objetivos.
+                        <b>Evaluación completa</b>: Analizamos tu estado nutricional, historial deportivo, objetivos y estilo de vida para crear un plan personalizado.
                     </li>
                     <li>
-                        <b>Enfoque personalizado</b>: Creamos planes de alimentación adaptados a tus necesidades individuales, preferencias y estilo de vida.
-                            
+                        <b>Soporte continuo</b>: Te acompañamos durante todo el proceso, brindándote asesoría, seguimiento y motivación para alcanzar tus metas.
                     </li>
                     <li>
-                        <b>Soporte continuo</b>: Te brindamos orientación y seguimiento durante todo el proceso para asegurar tu éxito.
+                        <b>Planes basados en evidencia</b>: Te ofrecemos planes nutricionales respaldados por la ciencia y las últimas investigaciones en nutrición deportiva.
+                    </li>
+                    <li>
+                        <b>Acceso a recursos exclusivos</b>: Recibirás recetas, guías y materiales educativos para complementar tu plan nutricional.
                     </li>
                 </ul>
-            </p>
+                Con nuestro experto en nutrición deportiva, alcanzarás tus objetivos de rendimiento deportivo y mejorarás tu salud en general.
+            </div>
         </div>
     </div>
 
