--- a/pages/servicios/perdida-y-control-de-peso.html
+++ b/pages/servicios/perdida-y-control-de-peso.html
@@ -57,15 +57,22 @@
                 <li>
                     <b>Desarrollar hábitos saludables</b>: Te guiaremos para adoptar patrones de alimentación y actividad física que promuevan la pérdida de peso a largo plazo.
                 </li>
+                <li>
+                    <b>Mejorar tu salud general</b>: Nos enfocaremos en tu bienestar general, incluyendo tu estado físico, mental y emocional, para ayudarte a alcanzar un estilo de vida más saludable y feliz.
+                </li>
             </ul>
         </div>
         <div class="service-value">
             <h2 class="value-title">
                 ¿Por qué elegir nuestro programa de Pérdida y Control de Peso?
             </h2>
-            <p class="value-text">
-                Nuestros planes de alimentación están diseñados para ayudarte a:
+            <div class="value-text">
+                Nuestro enfoque holístico te ofrece:
                 <ul>
+                    <li>
+                        <b>Más allá de la báscula</b>: Nos enfocamos en mejorar tu salud general, no solo en un número en la báscula. Te guiaremos
+                        para adoptar hábitos saludables que te brinden mayor energía, vitalidad y bienestar integral.
+                    </li>
                     <li>
                         <b>Enfoque personalizado</b>: Adaptamos nuestro enfoque a tus necesidades individuales y proporcionamos apoyo continuo.
                     </li>
@@ -73,10 +80,11 @@
                         <b>Resultados sostenibles</b>: No fomentamos dietas relámpago, sino cambios duraderos en tu estilo de vida.                            
                     </li>
                     <li>
-                        <b>Más allá de la báscula</b>: Nos enfocamos en mejorar tu salud general, no solo en un número.
+                        <b>Soporte profesional</b>: Un experto en nutrición y actividad física te acompañará en cada paso del camino, brindándote la orientación y el apoyo que necesitas para alcanzar tus metas.
                     </li>
                 </ul>
-            </p>
+                Con nuestro programa de pérdida y control de peso, podrás desarrollar habitos alimenticios saludables que duren toda la vida.
+            </div>
         </div>
     </div>
 
