--- a/pages/servicios/planes-de-entrenamiento.html
+++ b/pages/servicios/planes-de-entrenamiento.html
@@ -52,13 +52,19 @@
             saludable y fuerte. A través de una estructuración y orientación física personalizada, podrás:
             <ul>
                 <li>
-                    <b>Definir tus objetivos específicos</b>: Trabajaremos contigo para establecer metas claras y alcanzables.
+                    <b>Definir tus objetivos específicos</b>: Trabajaremos contigo para establecer metas claras y alcanzables
+                    que se ajusten a tu estilo de vida y expectativas.
                 </li>
                 <li>
-                    <b>Diseñar un plan de entrenamiento efectivo</b>: Te guiaremos en la realización de ejercicios adecuados a tu condición física y objetivos.
+                    <b>Diseñar un plan de entrenamiento efectivo</b>: Te guiaremos en la realización de ejercicios adecuados a tu
+                    condición física, nivel de experiencia y objetivos especificos.
                 </li>
                 <li>
-                    <b>Optimizar tu rendimiento</b>: Combinaremos entrenamiento y nutrición para maximizar tus resultados.
+                    <b>Optimizar tu rendimiento</b>: Combinaremos entrenamiento y nutrición para maximizar tus resultados, asegurándote
+                    una progresión segura y eficiente..
+                </li>
+                <li>
+                    <b>Mejorar tu salud y bienestar general</b>: Fortalecerás tu cuerpo, aumentarás tu energía y vitalidad, y reducirás el riesgo de enfermedades crónicas.
                 </li>
             </ul>
         </div>
@@ -66,20 +72,29 @@
             <h2 class="value-title">
                 ¿Por qué elegir a nuestro entrenador personal?
             </h2>
-            <p class="value-text">
+            <div class="value-text">
                 Nuestros planes de alimentación están diseñados para ayudarte a:
                 <ul>
                     <li>
-                        <b>Experiencia y conocimiento</b>: Contamos con un equipo de profesionales certificados y capacitados para guiarte en tu proceso.
+                        <b>Experiencia y conocimiento</b>: Contamos con un equipo de profesionales certificados y capacitados para
+                        guiarte en tu proceso de entrenamiento, brindándote la orientación y el apoyo que necesitas para alcanzar tus metas.
                     </li>
                     <li>
-                        <b>Enfoque personalizado</b>: Creamos planes de entrenamiento adaptados a tus necesidades, nivel de condición física y preferencias.
+                        <b>Enfoque personalizado</b>: Creamos planes de entrenamiento adaptados a tus necesidades, nivel de condición física,
+                        preferencias y objetivos específicos.
                     </li>
                     <li>
-                        <b>Motivación y apoyo</b>: Te brindaremos el impulso y la motivación que necesitas para alcanzar tus metas.
+                        <b>Motivación y apoyo constante</b>: Te brindaremos el impulso y la motivación que necesitas para mantenerte enfocado
+                        y comprometido con tu programa de entrenamiento.
+                    </li>
+                    <li>
+                        <b>Acceso a recursos exclusivos</b>: Recibirás materiales educativos, guías de entrenamiento y recetas de nutrición
+                        para complementar tu plan y optimizar tus resultados.
                     </li>
                 </ul>
-            </p>
+                Con nuestros planes de entrenamiento personalizados, podrás desarrollar una rutina de ejercicios consistente y sostenible.
+                Fortalecerás tu cuerpo, aumentarás tu resistencia y mejorarás tu condición física general.
+            </div>
         </div>
     </div>
 
