Change p.value-text for div.value-text

--- a/pages/servicios/cineantropometria.html
+++ b/pages/servicios/cineantropometria.html
@@ -76,7 +76,7 @@
             <h2 class="value-title">
                 ¿Por qué elegir a nuestro especialista en cineantropometría?
             </h2>
-            <p class="value-text">
+            <div class="value-text">
                 Nuestro experto en cineantropometría te ofrece:
                 <ul>
                     <li>
@@ -106,7 +106,7 @@
                 </ul>
                 Con nuestros servicios de cineantropometría, podrás obtener una imagen precisa y detallada de tu composición corporal
                 para monitorizar tu progreso de manera efectiva.
-            </p>
+            </div>
         </div>
     </div>
 
