--- a/pages/servicios/diabetes.html
+++ b/pages/servicios/diabetes.html
@@ -74,7 +74,7 @@
             <h2 class="value-title">
                 ¿Por qué elegir a nuestro educador en diabetes?
             </h2>
-            <p class="value-text">
+            <div class="value-text">
                 Nuestro educador en diabetes te ofrece:
                 <ul>
                     <li>
@@ -107,7 +107,7 @@
                 </ul>
                 Con el conocimiento adquirido, podras tomar decisiones informadas sobre el manejo de tu condición para reducir el riesgo
                 de complicaciones y vivir una vida plena y activa.
-            </p>
+            </div>
         </div>
     </div>
 
